css/styles.css
a {
  text-decoration: none;
}
* {
  transition: 0.4s ease;
}

body {
  overflow-x: hidden;
  font-family: "Roboto";
  font-size: 14px;
  line-height: 18px;
  letter-spacing: 2px;
  font-weight: 400;
}
.rela-block {
  display: block;
  position: relative;
  text-align: center;
  box-sizing: border-box;
  overflow: hidden;
}
.floated {
  position: relative;
  box-sizing: border-box;
  overflow: hidden;
}
.floated.left {
  float: left;
}
.floated.right {
  float: right;
}
.abs-cent-text {
  position: absolute;
  width: 90%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  
}
.orbitron {
  display: inline-block;
  position: relative;
  font-family: "Orbitron";
  font-size: 20px;
  letter-spacing: 0px;
  line-height: 32px;
  margin-bottom: 60px;
  -webkit-text-stroke: 1px black;
}
.orbitron::before,
.orbitron::after {
  content: "";
  position: absolute;
  height: 2px;
  width: 60%;
  top: 50%;
  transform: translateY(-50%);
  background-color: #fff;
  -webkit-text-stroke: 1px black;
}
.orbitron::before {
  left: -65%;
}
.orbitron::after {
  right: -63%;
}
.orbitron.black-orb::before,
.orbitron.black-orb::after {
  background-color: #000;
}
.nav-bar {
  position: fixed;
  z-index: 100;
  height: 110px;
  top: 0;
  left: 0;
  right: 0;
  padding: 0 6%;
}
.nav-bar.scrolled {
  height: 80px;
  background-color: rgba(0,0,0,0.7);
}
.nav-logo {
  position: absolute;
  top: 50%;
  left: 6%;
  transform: translateY(-50%);
  font-family: "Montserrat";
  font-size: 24px;
  letter-spacing: 0px;
  color: #fff;
  transition: 0.4s ease;
  cursor: pointer;
}
.nav-links-container {
  position: absolute;
  top: 50%;
  right: 6%;
  transform: translateY(-50%);
}
.nav-link {
  color: #999;
  font-size: 13px;
  text-transform: uppercase;
  cursor: pointer;
  font-weight: 500;
  padding: 0 12px;
  transition: 0.4s ease;
  display: inline-block;
}
.nav-link.active,
.nav-link:hover {
  color: #999;
}
#topLink {
  opacity: 0;
}
.nav-link:hover {
  background-color: #000;
  border-radius: 10px;
  transition: 1s;
  font-size: 20px;
}
.nav-logoimg{
  margin-left: -95px;
}
/* This is for the Welcome Page! */
.top-section {
  height: 100vh;
  background: url(../assets/welcomepageWP.jpg) no-repeat center;
  background-size: cover;
}
.grad-back::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: radial-gradient(transparent, rgba(0,0,0,0.9));
}
.top-text {
  color: #fff;
  top: 58%;
  line-height: 28px;
}
.top-small-text {
  font-size: 17px;
  line-height: 24px;
  letter-spacing: 2px;
  font-weight: 400;
}
.big-text {
  font-family: "Montserrat";
  text-transform: uppercase;
  font-size: 5vw;
  line-height: 72px;
  letter-spacing: 20px;
  margin-bottom: 60px;
  text-shadow: 2px 2px black;
}
.half-big-text {
  font-family: "Montserrat";
  text-transform: uppercase;
  font-size: 30px;
  line-height: 48px;
  letter-spacing: 12px;
  margin-bottom: 45px;
}
.half-big-text.has-border {
  display: inline-block;
  position: relative;
  margin: 0 auto 50px;
  padding: 15px 45px;
  border: 10px solid;
}
.under-top-section {
  color: #fff;
  background-color: #1d1d1d;
  text-align: left;
  padding: 0 6%;
}
.under-top-big-text {
  margin-top: 80px;
}
.under-top-small-text {
  width: 84%;
  max-width: 580px;
  margin-bottom: 50px;
}
.lines-thing {
  display: inline-block;
  position: relative;
  margin-bottom: 45px;
  height: 2px;
  width: 80px;
  background-color: #fff;
}
.lines-thing::before,
.lines-thing::after {
  content: "";
  position: absolute;
  height: 2px;
  width: 25px;
  background-color: #fff;
}
.lines-thing::before {
  top: -12px;
}
.lines-thing::after {
  bottom: -12px;
}
.lines-thing.black {
  background-color: #000;
}
.lines-thing.black::before,
.lines-thing.black::after {
  background-color: #000;
}
.welcome-section {
  height: 520px;
  background-size: 1100px 660px;
}
.welcome-section::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient(to left, #fff 48%, transparent);
}
.welcome-section .orbitron {
  font-size: 16px;
  margin-bottom: 30px;
}
.welcome-text {
  right: 0;
  width: 45%;
  max-width: 900px;
  transform: translateY(-50%);
  text-align: center;
}
.welcome-text .big-text {
  margin-bottom: 30px;
}
.welcome-text p {
  max-width: 480px;
  margin: 0 auto 40px;
}
.has-lines {
  display: inline-block;
  position: relative;
  text-transform: uppercase;
  padding: 13px 45px;
  border-left: 2px solid;
  border-right: 2px solid;
  font-weight: 700;
  letter-spacing: 4px;
  margin: 10px;
}
.has-lines::before,
.has-lines::after {
  content: "";
  position: absolute;
  height: 2px;
  left: 45px;
  right: 45px;
  transition: 0.2s ease;
}
.has-lines:before {
  top: 0;
}
.has-lines::after {
  bottom: 0;
}
.has-lines.white:hover::before,
.has-lines.white:hover::after {
  background-color: #fff;
}
.has-lines.black:hover::before,
.has-lines.black:hover::after {
  background-color: #000;
}
.has-lines:hover::before {
  top: 8px;
}
.has-lines:hover::after {
  bottom: 10px;
}
.about-us-section {
  padding: 150px 0 50px;
}
.about-us-section> p {
  display: block;
  position: relative;
  width: 65%;
  margin: 30px auto 70px;
}
.about-us-section .orbitron {
  margin-bottom: 30px;
}
.about-us-quad-container,
.about-us-bottom-container {
  width: 85%;
  max-width: 1100px;
  margin: 0 auto 100px;
}
.quad-half {
  width: 50%;
  text-align: left;
  padding: 20px 20px 10px;
}
.quad-half p {
  width: 90%;
}
.half-big-text.has-border {
  display: inline-block;
  position: relative;
  margin: 0 auto 50px;
  padding: 15px 45px;
  border: 10px solid;
}

 #Portfolio {
    display: inline-block;
    position: relative;
    margin: 0 auto 50px;
    padding: 15px 45px;
    border: 10px solid;

  }

  #icons {
    display: flex;
    justify-content: center;
  }


.bg {
  position: fixed;
  top: -4rem;
  left: -12rem;
  z-index: -1;
  opacity: 0;
}

.bg2 {
  position: fixed;
  bottom: -2rem;
  right: -3rem;
  z-index: -1;
  width: 9.375rem;
  opacity: 0;
}

@media screen and (min-width: 48rem) {
  main {
    display: flex;
    align-items: center;
  }
}
  @media screen and (min-width: 93.75rem) {
    .swiper {
      width: 85%;
    }
  }

.swiper {
  width: 100%;
  padding-top: 3.125rem;
}

.swiper-pagination-bullet,
.swiper-pagination-bullet-active {
  background: #fff;
}

.swiper-pagination {
  bottom: 1.25rem !important;
}

.swiper-slide {
  width: 18.75rem;
  height: 28.125rem;
  display: flex;
  flex-direction: column;
  justify-content: end;
  align-items: self-start;
}

.swiper-slide h2 {
  color: #fff;
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-size: 1.4rem;
  line-height: 1.4;
  margin-bottom: 0.625rem;
  padding: 0 0 0 1.563rem;
  text-transform: uppercase;
}

.swiper-slide p {
  color: #dadada;
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  padding: 0 1.563rem;
  line-height: 1.6;
  font-size: 0.75rem;
  display: -webkit-box;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.swiper-slide a {
  margin: 1.25rem 1.563rem 3.438rem 1.563rem;
  padding: 0.438em 1.875rem;
  font-size: 0.9rem;
}

.swiper-slide a:hover {
  color: #005baa;
}

.swiper-slide div {
  display: none;
  opacity: 0;
  padding-bottom: 0.625rem;
}

.swiper-slide-active div {
  display: block;
  opacity: 1;
}

.swiper-slide--one {
  background: linear-gradient(to top, #0f2027, #203a4300, #2c536400), url("../assets/picture1.jpg") no-repeat 50% 50%/cover;
}

.swiper-slide--two {
  background: linear-gradient(to top, #0f2027, #203a4300, #2c536400), url("../assets/picture2.jpg") no-repeat 50% 50%/cover;
}

.swiper-slide--three {
  background: linear-gradient(to top, #0f2027, #203a4300, #2c536400), url("../assets/picture3.jpg") no-repeat 50% 50%/cover;
}

.swiper-slide--four {
  background: linear-gradient(to top, #0f2027, #203a4300, #2c536400), url("../assets/msedge_oLV82isnBA.jpg") no-repeat 50% 50%/cover;
}

.swiper-slide--five {
  background: linear-gradient(to top, #0f2027, #203a4300, #2c536400), url("../assets/msedge_Xi3iRTBGLI.jpg") no-repeat 50% 50%/cover;
}

.swiper-3d .swiper-slide-shadow-left,
.swiper-3d .swiper-slide-shadow-right {
  background-image: none;
}

.bg, .bg2 {
    opacity: 0.1;
  }

  @media screen and (max-width: 1300px) {
    .test-left .half-big-text {
      letter-spacing: 2px;
      padding: 15px 35px;
    }
  }
  @media screen and (max-width: 1100px) {
    .big-text {
      font-size: 45px;
      line-height: 50px;
      letter-spacing: 14px;
    }
    .nav-logo {
      left: 4%;
    }
    .nav-links-container {
      right: 4%;
    }
    .nav-link {
      padding: 0 6px;
    }
    .welcome-section {
      background-size: 800px 580px;
    }
    .plan {
      margin: 0px 8px 20px;
    }
  }
  @media screen and (max-width: 900px) {
    .nav-bar.scrolled .nav-links-container {
      top: 30px;
    }
    .nav-logo {
      left: -45px;
    }
    #topLink {
      opacity: 1;
    }
    .nav-links-container {
      width: 140px;
      text-align: center;
      top: 40px;
      transform: none;
      right: 50px;
    }
    .nav-links-container:hover .nav-link {
      transition: 0.4s ease;
      height: 100%;
      opacity: 1;
    }
    .nav-link {
      display: block;
      height: 0;
      opacity: 0;
      transition: 0s ease;
    }
    .nav-link.active {
      height: 100%;
      opacity: 1;
      margin-top: -13px;
      opacity: 1;
    }
    .nav-link.active {
      height: 100%;
      opacity: 1;
      margin-top: -13px;
    }
    #topLink:hover {
      background-color: transparent;
      opacity: 1;
    }
  }

